saturn-account-macros/tests/compile_fail/zero_copy_without_init.rs
use saturn_account_macros::Accounts;
use saturn_account_parser::codec::BorshAccount;

#[derive(Accounts)]
struct ZeroCopyNoInit<'info> {
    #[account(zero_copy)]
    // Wrong on purpose. BorshAccount is not a ZeroCopyAccount.
    data: BorshAccount<'info, u64>,
}

fn main() {}
